--- a/project.config
+++ b/project.config
@@ -2,4 +2,5 @@
 	inheritFrom = scm/acls/domain_network_and_connectivity
 [project]
 	state = active
-	description = "Domain: Network & Connectivity;"
+	description = "Domain: Network & Connectivity;"\n\
+"Licenses: LGPL-2.1;"
