--- a/project.config
+++ b/project.config
@@ -1,5 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_network_and_connectivity/data_network
 [project]
-	description = "Domain: Network & Connectivity;"\n\
-"Licenses: LGPL-2.1;"
+	description = "Domain: Network & Connectivity / Data Network;"
